--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,70 @@
-src/packages/
-bin/
-obj/
+*.*scc
+*.FileListAbsolute.txt
+*.aps
+*.bak
+*.[Cc]ache
+*.clw
+*.eto
+*.fb6lck
+*.fbl6
+*.fbpInf
+*.ilk
+*.lib
+*.log
+*.ncb
+*.nlb
+*.obj
+*.patch
+*.pch
+*.pdb
+*.plg
+*.[Pp]ublish.xml
+*.rdl.data
+*.sbr
+*.scc
+*.sig
+*.sqlsuo
 *.suo
+*.svclog
+*.tlb
+*.tlh
+*.tli
+*.tmp
 *.user
+*.vshost.*
+*DXCore.Solution
+*_i.c
+*_p.c
+Ankh.Load
+Backup*
+CVS/
+PrecompiledWeb/
+UpgradeLog*.*
+[Bb]in/
+[Dd]ebug/
+[Oo]bj/
+[Rr]elease/
+[Tt]humbs.db
+_UpgradeReport_Files
+_[Rr]e[Ss]harper.*
+*.[Rr]e[Ss]harper
+hgignore[.-]*
+ignore[.-]*
+svnignore[.-]*
+lint.db
+src/FunnelWeb.Web/App_Data/ClientDependency
+[Ff]iles\
+Temp/
+build/Artifacts/
+build/Published/
+build/TestResult.xml
+[pP]ublish
+Tools\*.nupkg
+Views\Extensions\
+src/FunnelWeb.sln.docstates
+build/NuGet/
+*.sdf
+*.mdf
+*.ldf
+AppHarbourConfig.xml
+packages/
